[project]
name = "sedonadb-ggsql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "apache-sedona[db]>=1.9.0",
    "ggsql>=0.3.1",
    "marimo[edit,recommended]>=0.23.5",
    "nbformat>=5.10.4",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.12",
    "sedona>=1.0.4",
    "vl-convert-python>=1.9.0.post1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pyyaml>=6.0.3",
]

